composer require jeroennoten/laravel-adminlte https://github.com/jeroennoten/Laravel-AdminLTE

--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^3.0.0",
+        "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.17"
+        "vue": "^2.5.17",
+        "webpack-cli": "^3.1.2"
     },
     "dependencies": {
         "ajv": "^6.6.1",
         "build": "^0.1.4",
-        "imagemin": "^5.3.1"
+        "imagemin": "^5.3.1",
+        "webpack": "^4.27.1"
     }
 }
