--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
-        "pusher/pusher-php-server": "^3.2"
+        "pusher/pusher-php-server": "^3.2",
+        "spatie/laravel-permission": "^2.28"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
