--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,10 @@
         "jeroennoten/laravel-adminlte": "^1.24",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "php-amqplib/php-amqplib": "^2.8",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^3.2",
+        "rap2hpoutre/laravel-log-viewer": "^0.22.1",
         "spatie/laravel-permission": "^2.28"
     },
     "require-dev": {
