Laravel Telescope  新扩展

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.24",
         "laravel/framework": "5.7.*",
+        "laravel/telescope": "^1.0",
         "laravel/tinker": "^1.0",
         "php-amqplib/php-amqplib": "^2.8",
         "predis/predis": "^1.1",
