--- a/package.json
+++ b/package.json
@@ -14,16 +14,23 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
-        "laravel-mix": "^2.0",
+        "laravel-mix": "^4.0.7",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "webpack-cli": "^3.1.2"
+        "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
         "ajv": "^6.6.1",
         "build": "^0.1.4",
         "imagemin": "^5.3.1",
+        "laravel-echo": "^1.5.2",
+        "laravel-echo-server": "^1.5.0",
+        "pusher-js": "^4.3.1",
+        "socket.io-client": "^2.2.0",
         "webpack": "^4.27.1"
     }
 }
