--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/framework": "5.7.*",
         "laravel/telescope": "^1.0",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.4.0",
         "php-amqplib/php-amqplib": "^2.8",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^3.2",
