--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "ext-json": "*",
         "barryvdh/laravel-ide-helper": "^2.5",
+        "dingo/api": "2.0.0-alpha1",
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.24",
         "laravel/framework": "5.7.*",
