--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^3.2",
         "rap2hpoutre/laravel-log-viewer": "^0.22.1",
-        "spatie/laravel-permission": "^2.28"
+        "spatie/laravel-permission": "^2.28",
+        "tymon/jwt-auth": "^1.0.0-rc.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
