--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -37,3 +36,12 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+QUEUE_DRIVER=redis
+
+API_STANDARDS_TREE=x
+API_SUBTYPE=myapp
+API_CONDITIONAL_REQUEST=false
+API_DEBUG=false
+API_DOMAIN=example.com
+API_STRICT=true
