--- a/package.json
+++ b/package.json
@@ -20,16 +20,18 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
+        "vue": "^2.5.21",
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
         "ajv": "^6.6.1",
         "build": "^0.1.4",
+        "clipboard": "^2.0.4",
         "imagemin": "^5.3.1",
         "laravel-echo": "^1.5.2",
         "laravel-echo-server": "^1.5.0",
         "pusher-js": "^4.3.1",
+        "react-json-view": "^1.19.1",
         "socket.io-client": "^2.2.0",
         "webpack": "^4.27.1"
     }
