--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,7 @@
     "/js/admin.js": "/js/admin.js",
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/js/echo.js": "/js/echo.js"
+    "/js/echo.js": "/js/echo.js",
+    "/js/manifest.js": "/js/manifest.js",
+    "/js/vendor.js": "/js/vendor.js"
 }
