--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
+        "orangehill/iseed": "^2.6",
         "phpstan/phpstan": "^0.10.6",
         "phpunit/phpunit": "^7.0"
     },
