--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-json": "*",
+        "barryvdh/laravel-cors": "^0.11.2",
         "barryvdh/laravel-ide-helper": "^2.5",
         "dingo/api": "2.0.0-alpha1",
         "fideloper/proxy": "^4.0",
