--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "barryvdh/laravel-ide-helper": "^2.5",
         "dingo/api": "2.0.0-alpha1",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/psr7": "^1.5",
         "jeroennoten/laravel-adminlte": "^1.24",
         "laravel/framework": "5.7.*",
         "laravel/telescope": "^1.0",
@@ -21,10 +22,12 @@
         "laravelcollective/html": "^5.4.0",
         "noh4ck/graphiql": "^1.0",
         "php-amqplib/php-amqplib": "^2.8",
+        "php-http/curl-client": "^1.7",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^3.2",
         "rap2hpoutre/laravel-log-viewer": "^0.22.1",
         "rebing/graphql-laravel": "^1.17",
+        "sentry/sentry-laravel": "1.0.0-beta2",
         "spatie/laravel-permission": "^2.28",
         "tymon/jwt-auth": "^1.0.0-rc.1"
     },
